WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
251098
InlineIterator::Box:logicalLeft/right do not return entirely logical values
https://bugs.webkit.org/show_bug.cgi?id=251098
Summary
InlineIterator::Box:logicalLeft/right do not return entirely logical values
alan
Reported
2023-01-24 10:55:07 PST
ssia
Attachments
Patch
(18.36 KB, patch)
2023-01-24 11:01 PST
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(19.16 KB, patch)
2023-01-24 11:50 PST
,
alan
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2023-01-24 11:01:37 PST
Created
attachment 464633
[details]
Patch
alan
Comment 2
2023-01-24 11:50:06 PST
Created
attachment 464635
[details]
Patch
EWS
Comment 3
2023-01-24 18:09:08 PST
Committed
259324@main
(d000f817a148): <
https://commits.webkit.org/259324@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 464635
[details]
.
Radar WebKit Bug Importer
Comment 4
2023-01-24 18:10:17 PST
<
rdar://problem/104629051
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug